moves VJF into a file

--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -17,12 +17,73 @@
     "import numpy as np\n",
     "from scipy.stats import multivariate_normal\n",
     "from scipy.special import logsumexp\n",
-    "from tqdm.notebook import trange\n",
+    "import vjf.online\n",
     "import torch\n",
-    "from vjf.online import VJF\n",
-    "from scipy.stats import special_ortho_group\n",
-    "from adaptive_latents.transformer import DecoupledTransformer\n",
-    "from adaptive_latents import ArrayWithTime"
+    "from tqdm.notebook import trange\n",
+    "from adaptive_latents.input_sources import LDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BaseVJF(vjf.online.VJF):\n",
+    "    @staticmethod\n",
+    "    def generate_cloud(q, rng, n_points=1000,):\n",
+    "        filtering_mu, filtering_logvar = q\n",
+    "\n",
+    "        mu_f = filtering_mu[0].detach().cpu().numpy().T\n",
+    "        var_f = filtering_logvar[0].detach().exp().cpu().numpy().T\n",
+    "        Sigma_f = np.eye(xdim) * var_f\n",
+    "\n",
+    "        x = multivariate_normal(mu_f.flatten(), Sigma_f).rvs(size=n_points, random_state=rng).astype(np.float32)\n",
+    "        x = torch.from_numpy(x).to(device)\n",
+    "        return x\n",
+    "    \n",
+    "    def step_for_cloud(mdl, cloud, rng):\n",
+    "        cloud += mdl.system.velocity(cloud) + mdl.system.noise.var ** 0.5 * torch.from_numpy(rng.normal(size=cloud.shape))\n",
+    "        return cloud\n",
+    "\n",
+    "    def get_logprob_for_cloud(self, cloud, point):\n",
+    "        y_var = self.likelihood.logvar.detach().exp().cpu().numpy().T\n",
+    "\n",
+    "        y_tilde = self.decoder(cloud).detach().cpu().numpy()\n",
+    "\n",
+    "        sample_logprobs = [self.diagonal_normal_logpdf(y_est, y_var, point) for y_est in y_tilde]\n",
+    "        logprob = logsumexp(sample_logprobs) - np.log(cloud.shape[0])\n",
+    "        return logprob\n",
+    "\n",
+    "    def get_distance_for_cloud(self, cloud, point):\n",
+    "        y_tilde = self.decoder(cloud).detach().cpu().numpy()\n",
+    "        distance = np.linalg.norm(y_tilde - point, axis=-1).mean()\n",
+    "        return distance\n",
+    "    \n",
+    "    def get_cloud_at_time_t(self, q, n_points, rng, n_steps):\n",
+    "        with torch.no_grad():\n",
+    "            cloud = self.generate_cloud(q, n_points, rng)\n",
+    "            for _ in range(n_steps):\n",
+    "                cloud = self.step_for_cloud(cloud, rng)\n",
+    "            return cloud\n",
+    "            \n",
+    "\n",
+    "    @staticmethod\n",
+    "    def diagonal_normal_logpdf(mean, variance, sample):\n",
+    "        mean = mean.flatten()\n",
+    "        variance = variance.flatten()\n",
+    "        sample = sample.flatten()\n",
+    "\n",
+    "        assert len(mean) == len(variance) == len(sample), f\"inconsistent shape: {mean.shape}, {variance.shape}, {sample.shape}\"\n",
+    "\n",
+    "        logprobs = []\n",
+    "        for i in range(len(sample)):\n",
+    "            x = sample[i]\n",
+    "            m = mean[i]\n",
+    "            v = variance[i]\n",
+    "            logprobs.append(-0.5 * ((x - m) ** 2 / v + np.log(2 * np.pi * v)))\n",
+    "        return sum(logprobs)\n",
+    "\n"
    ]
   },
   {
@@ -64,26 +125,14 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "total_time = 500\n",
-    "seconds_per_rotation = 1\n",
-    "samples_per_second = 10\n",
+    "y, stim = LDS.nest_dynamical_system(100, rng=rng)\n",
     "\n",
-    "theta = np.linspace(0, total_time/seconds_per_rotation*2*np.pi, total_time*samples_per_second)\n",
-    "x = np.column_stack([np.cos(theta), np.sin(theta)])\n",
-    "y = x @ special_ortho_group(dim=10, seed=rng).rvs(1)[:2]\n",
-    "y = y + rng.normal(0, 0.1, size=y.shape)\n",
-    "u = np.zeros((y.shape[0], 1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt\n",
-    "plt.plot(*x[:11].T, '.')\n",
-    "plt.axis('equal')"
+    "u = 0*stim\n",
+    "\n",
+    "xdim = 2\n",
+    "udim = u.shape[-1]\n",
+    "ydim = y.shape[-1]\n",
+    "\n"
    ]
   },
   {
@@ -93,10 +142,6 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "xdim = x.shape[-1]\n",
-    "udim = u.shape[-1]\n",
-    "\n",
-    "ydim = y.shape[-1]\n",
     "\n",
     "\n",
     "config=dict(\n",
@@ -138,7 +183,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "mdl = VJF(config)\n",
+    "mdl = BaseVJF(config)\n",
     "\n",
     "ys = torch.from_numpy(y).float()\n",
     "us = torch.from_numpy(u).float()\n",
@@ -168,97 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VJF_transformer(DecoupledTransformer):\n",
-    "    base_algorithm = VJF\n",
-    "    \n",
-    "    def __init__(self, *, config=None, latent_d=6, take_U=False, input_streams=None, output_streams=None, log_level=None):\n",
-    "        if input_streams is None:\n",
-    "            input_streams = {0:'Y', 1:'U'} if take_U else {0:'Y'}\n",
-    "        DecoupledTransformer.__init__(self=self, input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
-    "        self.take_U = take_U\n",
-    "        self.latent_d = latent_d\n",
-    "        config = config or {}\n",
-    "        self.config = self.default_config_dict({'xdim': self.latent_d}) | config\n",
-    "        self.last_seen = {}\n",
-    "        self.vjf = None\n",
-    "        self.q = None\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def default_config_dict(update=None):\n",
-    "        default_config = dict(\n",
-    "            resume=False,\n",
-    "            # xdim=6,  # dimension of hidden state\n",
-    "            udim=1,  # dimension of control vector\n",
-    "            # Ydim=udim,  # possibly not necessary?\n",
-    "            # Udim=udim,  # possibly not necessary?\n",
-    "            rdim=50,  # number of RBFs\n",
-    "            hdim=100,  # number of MLP hidden units\n",
-    "            lr=1e-3,  # learning rate\n",
-    "            clip_gradients=5.0,\n",
-    "            debug=False,\n",
-    "            likelihood='gaussian',  # \n",
-    "            system='rbf',\n",
-    "            recognizer='mlp',\n",
-    "            C=(None, True),  # loading matrix: (initial, estimate)\n",
-    "            b=(None, True),  # bias: (initial, estimate)\n",
-    "            A=(None, False),  # transition matrix if LDS\n",
-    "            Q=(1.0, True),  # state noise\n",
-    "            R=(1.0, True),  # observation noise\n",
-    "            random_seed=0,\n",
+    "from adaptive_latents.vjf import VJF\n",
     "\n",
-    "            # these depend on the input dimensions\n",
-    "            # ydim=ydim,  # dimension of observations\n",
-    "            # B=(np.zeros((xdim, udim)), False),  # interaction matrix\n",
-    "        )\n",
-    "\n",
-    "        update = update if update is not None else {}\n",
-    "        return default_config | update  # the | makes a copy of the original dict\n",
-    "        \n",
-    "        \n",
-    "    def init_vjf(self, ydim, udim=1):\n",
-    "        assert self.take_U or udim==1\n",
-    "        \n",
-    "        self.config.update({\n",
-    "            'ydim': ydim, \n",
-    "            'udim': udim,\n",
-    "            'B':(np.zeros((self.config['xdim'], udim)), False),\n",
-    "        })\n",
-    "        \n",
-    "        self.vjf = VJF(self.config)\n",
-    "\n",
-    "\n",
-    "    def _partial_fit(self, data, stream):\n",
-    "        if stream in self.input_streams:\n",
-    "            self.last_seen[self.input_streams[stream]] = data\n",
-    "            \n",
-    "            if len(self.last_seen) == len(self.input_streams):\n",
-    "                y = self.last_seen['Y']\n",
-    "                if self.take_U:\n",
-    "                    u = self.last_seen['U']\n",
-    "                else:\n",
-    "                    u = np.zeros((y.shape[0], 1))\n",
-    "                    \n",
-    "                if self.vjf is None:\n",
-    "                    self.init_vjf(ydim=y.shape[-1], udim=u.shape[-1])\n",
-    "                    \n",
-    "                y = torch.from_numpy(y).float()\n",
-    "                u = torch.from_numpy(u).float()\n",
-    "                self.q, _ = self.vjf.feed((y, u), q0=self.q)\n",
-    "    \n",
-    "    def transform(self, data, stream=0, return_output_stream=False):\n",
-    "        if self.q is not None:\n",
-    "        # if self.input_streams[stream] == 'Y' and self.q is not None:\n",
-    "            q0 =  self.q[0].detach().numpy()\n",
-    "            data = ArrayWithTime.from_transformed_data(q0, data)\n",
-    "        \n",
-    "        return (data, stream) if return_output_stream else data\n",
-    "    \n",
-    "    def get_params(self, deep=True):\n",
-    "        return super().get_params(deep=deep) | dict(take_U=self.take_U, latent_d=self.latent_d, config=self.config)\n",
-    "\n",
-    "\n",
-    "v = VJF_transformer(input_streams={0:'Y'}, latent_d=2)\n",
-    "# v.test_if_api_compatible()\n",
+    "v = VJF(input_streams={0:'Y'}, latent_d=2)\n",
     "ret = v.offline_run_on([y], show_tqdm=True)\n"
    ]
   },
@@ -272,6 +229,38 @@
     "\n",
     "ax.plot(*ret[-200:].T)\n",
     "ax.axis('equal');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "v = VJF(latent_d=2)\n",
+    "mu, logvar, losses = v.fit(y=y)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(mu[:,0], mu[:,1])\n",
+    "ax.axis('equal');\n"
    ]
   },
   {
@@ -295,22 +284,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def diagonal_normal_logpdf(mean, variance, sample):\n",
-    "    mean = mean.flatten()\n",
-    "    variance = variance.flatten()\n",
-    "    sample = sample.flatten()\n",
-    "    \n",
-    "    assert len(mean) == len(variance) == len(sample), f\"inconsistent shape: {mean.shape}, {variance.shape}, {sample.shape}\"\n",
-    "    \n",
-    "    logprobs = []\n",
-    "    for i in range(len(sample)):\n",
-    "        x = sample[i]\n",
-    "        m = mean[i]\n",
-    "        v = variance[i]\n",
-    "        logprobs.append(-0.5 * ((x - m) ** 2 / v + np.log(2 * np.pi * v)))\n",
-    "    return sum(logprobs)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -318,35 +292,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_samples(q, S, rng):\n",
-    "    filtering_mu, filtering_logvar = q\n",
-    "    \n",
-    "    mu_f = filtering_mu[0].detach().cpu().numpy().T\n",
-    "    var_f = filtering_logvar[0].detach().exp().cpu().numpy().T\n",
-    "    Sigma_f = np.eye(xdim) * var_f\n",
-    "\n",
-    "    x = multivariate_normal(mu_f.flatten(), Sigma_f).rvs(size=S, random_state=rng).astype(np.float32)\n",
-    "    x = torch.from_numpy(x).to(device)\n",
-    "    return x\n",
-    "\n",
-    "def step(x, mdl, rng):\n",
-    "    x += mdl.system.velocity(x) + mdl.system.noise.var ** 0.5 * torch.from_numpy(rng.normal(size=x.shape))\n",
-    "    return x\n",
-    "\n",
-    "def get_logprob_and_distance(mdl, x, y_true):\n",
-    "    y_var = mdl.likelihood.logvar.detach().exp().cpu().numpy().T\n",
-    "    \n",
-    "    y_tilde = mdl.decoder(x).detach().cpu().numpy()\n",
-    "    \n",
-    "    sample_logprobs = [diagonal_normal_logpdf(y_est, y_var, y_true) for y_est in y_tilde]\n",
-    "    logprob = logsumexp(sample_logprobs) - np.log(x.shape[0])\n",
-    "    \n",
-    "    distance = np.linalg.norm(y_tilde - y_true, axis=-1).mean()\n",
-    "    \n",
-    "    return logprob, distance\n",
     "\n",
     "def log_step(q, mdl, ys, t, rng, S=1000, T=10):\n",
-    "    x = generate_samples(q, S, rng)\n",
+    "    mdl: BaseVJF\n",
+    "    x = mdl.generate_cloud(q, rng)\n",
     "    \n",
     "    logprobs = []\n",
     "    distances = []\n",
@@ -356,8 +305,9 @@
     "        else:\n",
     "            y_tprime = ys[t].cpu().numpy() * np.nan\n",
     "\n",
-    "        x = step(x, mdl, rng)\n",
-    "        logprob, distance = get_logprob_and_distance(mdl, x, y_tprime)\n",
+    "        x = mdl.step_for_cloud(x, rng)\n",
+    "        logprob = mdl.get_logprob_for_cloud(x, y_tprime)\n",
+    "        distance = mdl.get_distance_for_cloud(x, y_tprime)\n",
     "\n",
     "        logprobs.append(logprob)\n",
     "        distances.append(distance)\n",
@@ -372,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl = VJF(config).to(device)\n",
+    "mdl = BaseVJF(config).to(device)\n",
     "\n",
     "ys = torch.from_numpy(y).float().to(device)\n",
     "us = torch.from_numpy(u).float().to(device)\n",
@@ -386,7 +336,7 @@
     "mu2 = np.zeros((ys.shape[0], xdim))\n",
     "\n",
     "for t in trange(ys.shape[0]):\n",
-    "    step_logprobs, step_distances = log_step(q, mdl, ys, t, rng, T=10)\n",
+    "    step_logprobs, step_distances = log_step(q, mdl, ys, t, rng, T=1)\n",
     "    logprobs.append(step_logprobs)\n",
     "    distances.append(step_distances)\n",
     "\n",
@@ -397,6 +347,16 @@
     "    mu2[t] = q[0].detach().numpy()\n",
     "\n",
     "logprobs, distances = np.array(logprobs), np.array(distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 10\n",
+    "y[i:] - y[:len(y)-i]"
    ]
   },
   {
@@ -432,7 +392,7 @@
     "# and distances were inconsistent between runs before, despite seeding.\n",
     "\n",
     "vars = {}\n",
-    "for var in ['seed', 'x', 'y', 'mu', 'ys', 'mu2', 'distances', 'logprobs']:\n",
+    "for var in ['seed', 'y', 'mu', 'ys', 'mu2', 'distances', 'logprobs']:\n",
     "    v = globals()[var]\n",
     "    if isinstance(v, torch.Tensor):\n",
     "        v = v.detach().cpu().numpy()\n",
