abstracts more of VJF into a base class

--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.stats import multivariate_normal\n",
-    "from scipy.special import logsumexp\n",
+    "from adaptive_latents.vjf import VJF, BaseVJF\n",
     "import vjf.online\n",
     "import torch\n",
     "from tqdm.notebook import trange\n",
@@ -29,60 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BaseVJF(vjf.online.VJF):\n",
-    "    @staticmethod\n",
-    "    def generate_cloud(q, rng, n_points=1000,):\n",
-    "        filtering_mu, filtering_logvar = q\n",
-    "\n",
-    "        mu_f = filtering_mu[0].detach().cpu().numpy().T\n",
-    "        var_f = filtering_logvar[0].detach().exp().cpu().numpy().T\n",
-    "        Sigma_f = np.eye(xdim) * var_f\n",
-    "\n",
-    "        x = multivariate_normal(mu_f.flatten(), Sigma_f).rvs(size=n_points, random_state=rng).astype(np.float32)\n",
-    "        x = torch.from_numpy(x).to(device)\n",
-    "        return x\n",
-    "    \n",
-    "    def step_for_cloud(mdl, cloud, rng):\n",
-    "        cloud += mdl.system.velocity(cloud) + mdl.system.noise.var ** 0.5 * torch.from_numpy(rng.normal(size=cloud.shape))\n",
-    "        return cloud\n",
-    "\n",
-    "    def get_logprob_for_cloud(self, cloud, point):\n",
-    "        y_var = self.likelihood.logvar.detach().exp().cpu().numpy().T\n",
-    "\n",
-    "        y_tilde = self.decoder(cloud).detach().cpu().numpy()\n",
-    "\n",
-    "        sample_logprobs = [self.diagonal_normal_logpdf(y_est, y_var, point) for y_est in y_tilde]\n",
-    "        logprob = logsumexp(sample_logprobs) - np.log(cloud.shape[0])\n",
-    "        return logprob\n",
-    "\n",
-    "    def get_distance_for_cloud(self, cloud, point):\n",
-    "        y_tilde = self.decoder(cloud).detach().cpu().numpy()\n",
-    "        distance = np.linalg.norm(y_tilde - point, axis=-1).mean()\n",
-    "        return distance\n",
-    "    \n",
-    "    def get_cloud_at_time_t(self, q, n_points, rng, n_steps):\n",
-    "        with torch.no_grad():\n",
-    "            cloud = self.generate_cloud(q, n_points, rng)\n",
-    "            for _ in range(n_steps):\n",
-    "                cloud = self.step_for_cloud(cloud, rng)\n",
-    "            return cloud\n",
-    "            \n",
-    "\n",
-    "    @staticmethod\n",
-    "    def diagonal_normal_logpdf(mean, variance, sample):\n",
-    "        mean = mean.flatten()\n",
-    "        variance = variance.flatten()\n",
-    "        sample = sample.flatten()\n",
-    "\n",
-    "        assert len(mean) == len(variance) == len(sample), f\"inconsistent shape: {mean.shape}, {variance.shape}, {sample.shape}\"\n",
-    "\n",
-    "        logprobs = []\n",
-    "        for i in range(len(sample)):\n",
-    "            x = sample[i]\n",
-    "            m = mean[i]\n",
-    "            v = variance[i]\n",
-    "            logprobs.append(-0.5 * ((x - m) ** 2 / v + np.log(2 * np.pi * v)))\n",
-    "        return sum(logprobs)\n",
     "\n"
    ]
   },
@@ -183,7 +128,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "mdl = BaseVJF(config)\n",
+    "mdl = vjf.online.VJF(config=config)\n",
     "\n",
     "ys = torch.from_numpy(y).float()\n",
     "us = torch.from_numpy(u).float()\n",
@@ -213,8 +158,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adaptive_latents.vjf import VJF\n",
-    "\n",
     "v = VJF(input_streams={0:'Y'}, latent_d=2)\n",
     "ret = v.offline_run_on([y], show_tqdm=True)\n"
    ]
@@ -239,9 +182,7 @@
    "source": [
     "\n",
     "v = VJF(latent_d=2)\n",
-    "mu, logvar, losses = v.fit(y=y)\n",
-    "\n",
-    "\n"
+    "mu, logvar, losses = v.fit(y=y)\n"
    ]
   },
   {
@@ -293,9 +234,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "def log_step(q, mdl, ys, t, rng, S=1000, T=10):\n",
+    "def log_step(mdl, ys, t, rng, S=1000, T=10):\n",
     "    mdl: BaseVJF\n",
-    "    x = mdl.generate_cloud(q, rng)\n",
+    "    x = mdl.generate_cloud(rng)\n",
     "    \n",
     "    logprobs = []\n",
     "    distances = []\n",
@@ -322,13 +263,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl = BaseVJF(config).to(device)\n",
+    "mdl = BaseVJF(config=config, latent_d=2)\n",
+    "\n",
+    "mdl.init_vjf(ydim, udim)\n",
     "\n",
     "ys = torch.from_numpy(y).float().to(device)\n",
     "us = torch.from_numpy(u).float().to(device)\n",
-    "\n",
-    "# could be None except for the logging functions\n",
-    "q = torch.zeros(1, xdim, device=device), torch.zeros(1, xdim, device=device)\n",
     "\n",
     "\n",
     "logprobs = []\n",
@@ -336,15 +276,15 @@
     "mu2 = np.zeros((ys.shape[0], xdim))\n",
     "\n",
     "for t in trange(ys.shape[0]):\n",
-    "    step_logprobs, step_distances = log_step(q, mdl, ys, t, rng, T=1)\n",
+    "    step_logprobs, step_distances = log_step(mdl, ys, t, rng, T=1)\n",
     "    logprobs.append(step_logprobs)\n",
     "    distances.append(step_distances)\n",
     "\n",
     "    y_t = ys[t].unsqueeze(0)\n",
     "    u_t = us[t].unsqueeze(0)\n",
-    "    q, loss = mdl.feed((y_t, u_t), q)\n",
+    "    mdl.observe(y_t, u_t)\n",
     "    \n",
-    "    mu2[t] = q[0].detach().numpy()\n",
+    "    # mu2[t] = q[0].detach().numpy()\n",
     "\n",
     "logprobs, distances = np.array(logprobs), np.array(distances)"
    ]
