modifies Bubblewrap and VJF to work more similarly

--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -11,7 +11,7 @@
     "from adaptive_latents import ArrayWithTime\n",
     "from adaptive_latents.input_sources import LDS\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from adaptive_latents import VJF, Bubblewrap, KalmanFilter\n",
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng()\n"
@@ -24,8 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
-    "X, stim = LDS.nest_dynamical_system(100)"
+    "b = Bubblewrap()\n",
+    "\n",
+    "b.input_streams"
    ]
   },
   {
@@ -35,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "v = VJF()"
    ]
   },
   {
@@ -45,17 +46,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
-    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
-    "ax.plot(X[:,0], X[:,1], X[:,2])\n",
-    "ax.axis('equal')\n",
-    "plt.show()\n"
+    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi)\n",
+    "stim.t = stim.t"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "fig, axs = plt.subplots(ncols=2, subplot_kw={'projection': '3d'})\n",
+    "for ax in axs:\n",
+    "    ax.plot(X[:,0], X[:,1], X[:,2])\n",
+    "    ax.axis('equal')\n",
+    "axs[0].view_init(elev=90, azim=0, roll=0)\n",
+    "axs[1].view_init(elev=0, azim=0, roll=0)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": []
