--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -23,15 +23,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +61,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "y, stim = LDS.nest_dynamical_system(100, rng=rng)\n",
+    "x, y, stim = LDS.nest_dynamical_system(500, rng=rng)\n",
     "\n",
     "u = 0*stim\n",
     "\n",
@@ -127,7 +118,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "mdl = vjf.online.VJF(config=config)\n",
     "\n",
     "ys = torch.from_numpy(y).float()\n",
@@ -158,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = VJF(input_streams={0:'Y'}, latent_d=2)\n",
+    "v = VJF(input_streams={0:'X'}, latent_d=2, rng=rng)\n",
     "ret = v.offline_run_on([y], show_tqdm=True)\n"
    ]
   },
@@ -168,10 +158,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
+    "%matplotlib inline\n",
+    "fig, axs = plt.subplots(ncols=2, figsize=(10, 4))\n",
     "\n",
-    "ax.plot(*ret[-200:].T)\n",
-    "ax.axis('equal');"
+    "axs[0].plot(ret[-200:,0], ret[-200:,1])\n",
+    "axs[0].set_title('VJF estimated latent state');\n",
+    "axs[0].axis('equal');\n",
+    "\n",
+    "axs[1].plot(x[-200:, 0], x[-200:, 1])\n",
+    "axs[1].set_title('true latent state');\n",
+    "axs[1].axis('equal');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "cloud = v.get_cloud_at_time_t(0).detach()\n",
+    "preds = v._vjf.decoder(cloud).detach().numpy()\n",
+    "\n",
+    "\n",
+    "n = 31\n",
+    "x_edges = np.linspace(-20,20, n)\n",
+    "y_edges = np.linspace(-20,20, n)\n",
+    "x_centers = np.convolve([.5,.5], x_edges, mode='valid')\n",
+    "y_centers = np.convolve([.5,.5], y_edges, mode='valid')\n",
+    "log_probs = np.zeros((len(y_centers), len(x_centers)))\n",
+    "for i, y_i in enumerate(y_centers):\n",
+    "    for j, x_j in enumerate(x_centers):\n",
+    "        log_probs[i,j] = v.get_logprob_for_cloud(cloud=cloud, point=np.array([x_j,y_i,0]))\n",
+    "i,j = np.unravel_index(np.argmax(log_probs), log_probs.shape)\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2, figsize=(10, 4), sharey=True, sharex=True, subplot_kw={'adjustable': 'box', 'aspect':1})\n",
+    "\n",
+    "axs[0].plot(x[-200:, 0], x[-200:, 1])\n",
+    "axs[0].scatter(preds[:, 0], preds[:, 1], color='C1', s=5, zorder=3)\n",
+    "axs[0].scatter(preds[:, 0].mean(), preds[:, 1].mean(), color='C2', zorder=3)\n",
+    "\n",
+    "axs[1].pcolormesh(x_edges,y_edges,log_probs, vmin=np.quantile(log_probs.flatten(), .5), vmax=log_probs.max(), cmap='plasma')\n",
+    "axs[1].scatter(x_centers[j], y_centers[i], color='C2')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.predict(0,method='asdf')"
    ]
   },
   {
@@ -181,16 +220,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "v = VJF(latent_d=2)\n",
-    "mu, logvar, losses = v.fit(y=y)\n"
+    "v = VJF(latent_d=2, rng=rng)\n",
+    "mu, logvar, losses = v.fit(y=y[:-15])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -234,9 +266,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "def log_step(mdl, ys, t, rng, S=1000, T=10):\n",
+    "def log_step(mdl, ys, t, S=1000, T=10):\n",
     "    mdl: BaseVJF\n",
-    "    x = mdl.generate_cloud(rng)\n",
+    "    x = mdl.generate_cloud()\n",
     "    \n",
     "    logprobs = []\n",
     "    distances = []\n",
@@ -246,7 +278,7 @@
     "        else:\n",
     "            y_tprime = ys[t].cpu().numpy() * np.nan\n",
     "\n",
-    "        x = mdl.step_for_cloud(x, rng)\n",
+    "        x = mdl.step_for_cloud(x)\n",
     "        logprob = mdl.get_logprob_for_cloud(x, y_tprime)\n",
     "        distance = mdl.get_distance_for_cloud(x, y_tprime)\n",
     "\n",
@@ -267,8 +299,8 @@
     "\n",
     "mdl.init_vjf(ydim, udim)\n",
     "\n",
-    "ys = torch.from_numpy(y).float().to(device)\n",
-    "us = torch.from_numpy(u).float().to(device)\n",
+    "ys = torch.from_numpy(y).float()\n",
+    "us = torch.from_numpy(u).float()\n",
     "\n",
     "\n",
     "logprobs = []\n",
@@ -276,7 +308,7 @@
     "mu2 = np.zeros((ys.shape[0], xdim))\n",
     "\n",
     "for t in trange(ys.shape[0]):\n",
-    "    step_logprobs, step_distances = log_step(mdl, ys, t, rng, T=1)\n",
+    "    step_logprobs, step_distances = log_step(mdl, ys, t, T=1)\n",
     "    logprobs.append(step_logprobs)\n",
     "    distances.append(step_distances)\n",
     "\n",
