--- a/workspace/day-notebooks/25-03-19.ipynb
+++ b/workspace/day-notebooks/25-03-19.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(1)"
+    "rng = np.random.default_rng(0)"
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\n",
     "predictor = VJF(latent_d=2, rng=rng)\n",
     "\n",
-    "# mu = predictor.offline_run_on(Y, show_tqdm=True)\n",
+    "mu = predictor.offline_run_on(Y, show_tqdm=True)\n",
     "\n"
    ]
   },
@@ -52,8 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(Y.sum())\n",
-    "\n"
+    "predictions = []\n",
+    "for i in trange(transitions_per_rotation+2):\n",
+    "    prediction = predictor.partial_fit_transform(adaptive_latents.ArrayWithTime([[i]], Y.t[-1]), stream='pred_obs_space')\n",
+    "    predictions.append(prediction)\n",
+    "\n",
+    "trajectory = np.squeeze(predictions)\n",
+    "\n",
+    "np.linalg.norm(trajectory[-1] - Y[-1])/np.linalg.norm(Y[-1])\n"
    ]
   },
   {
@@ -62,14 +68,7 @@
    "id": "4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predictions = []\n",
-    "for i in trange(transitions_per_rotation+1):\n",
-    "    prediction = predictor.partial_fit_transform(adaptive_latents.ArrayWithTime([[i]], Y.t[-1]), stream='pred_obs_space')\n",
-    "    predictions.append(prediction)\n",
-    "\n",
-    "trajectory = np.squeeze(predictions)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -78,8 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib qt\n",
     "plt.plot(Y[:, 0], Y[:, 1])\n",
-    "# plt.plot([initial_point[0, 0], X_hat[0, 0]], [initial_point[0, 1], X_hat[0, 1]], '--.', color='C2')\n",
+    "plt.plot([Y[-1, 0], trajectory[0, 0]], [Y[-1, 1], trajectory[0, 1]], '--.', color='C2')\n",
     "plt.plot(trajectory[:, 0], trajectory[:, 1], '.-')\n",
     "plt.axis('equal')\n",
     "plt.show()\n"
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor.show_nstep_cloud(0)"
+    "predictor.show_nstep_cloud(30)"
    ]
   }
  ],
