makes a test case where VJF and Bubblewrap both work

--- a/workspace/day-notebooks/25-03-19.ipynb
+++ b/workspace/day-notebooks/25-03-19.ipynb
@@ -35,9 +35,7 @@
    "source": [
     "transitions_per_rotation = 30\n",
     "radius = 5\n",
-    "_, Y, stim = LDS.nest_dynamical_system(1000, u_function=lambda **_: np.zeros(3), rng=rng)\n",
-    "\n",
-    "one_step_distance = np.linalg.norm(Y[0] - Y[1])\n",
+    "_, Y, stim = LDS.nest_dynamical_system(500, radius=radius, u_function=lambda **_: np.zeros(3), rng=rng)\n",
     "\n",
     "predictor = VJF(latent_d=2, rng=rng)\n",
     "\n",
